2011-07-11  Martin Robinson  <mrobinson@igalia.com>

        [GTK] [NRWT] Pixel tests do not work
        https://bugs.webkit.org/show_bug.cgi?id=64091

        Reviewed by Eric Seidel.

        Fix pixel test runs for GTK+ new-run-webkit-tests by exposing the
        path to the ImageDiff binary.

        * Scripts/webkitpy/layout_tests/port/gtk.py: Implement _path_to_image_diff.

2011-07-11  Dirk Pranke  <dpranke@chromium.org>

        Fix hang on win32 in a multiprocessing test that shouldn't have been running.

        Unreviewed, build fix.

        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:

2011-07-11  Adam Roben  <aroben@apple.com>

        Don't count leaks as test failures on TestFailures's front page

        As a bonus, this patch adds our first unit test.

        Fixes <http://webkit.org/b/64303> REGRESSION (r90489): TestFailures page says far more tests
        are failing on the Leaks bot than actually are

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/Builder.js:
        (Builder.prototype.getNumberOfFailingTests): Exclude lines containing "leak" when summing
        failure counts.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/Builder_unittests.js:
        Added. Contains a simple test to show that leaks aren't counted as test failures.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/run-unittests.html:
        Added. This is the test harness.

2011-06-14  Mike Stegeman  <mrstegeman@gmail.com>

        [GTK] Add API to allow setting local storage database path
        https://bugs.webkit.org/show_bug.cgi?id=62091

        Reviewed by Martin Robinson and Gustavo Noronha.

        Expose the path of the localStorage databases through a setting
        to allow HTML5 localStorage to be persistent. New setting is:
        html5-local-storage-database-path
