@@ -1,3 +1,14 @@
+2011-07-11  Alice Boxhall  <aboxhall@chromium.org>
+
+        Convert json_results_generator.py to output version 4 JSON.
+        https://bugs.webkit.org/show_bug.cgi?id=60869
+
+        Reviewed by Ojan Vafai.
+
+        * Scripts/webkitpy/layout_tests/layout_package/json_layout_results_generator.py:
+        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py:
+        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator_unittest.py:
+
 2011-07-11  Martin Robinson  <mrobinson@igalia.com>
 
         [GTK] [NRWT] Pixel tests do not work
